Add "activeInitiativeCountsByPhase" to /statistics.
